--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ====================
+09.09.2021 | v.1.0.1
+====================
+- added restrictions on small channels
+
+====================
 02.09.2021 | v.1.0.0
 ====================
 - added public links 
