--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ====================
+11.09.2021 | v.1.0.2
+====================
+- page with additional information about the channel has been changed / Изменилась страница с дополнительной информацией о канале
+
+====================
 09.09.2021 | v.1.0.1
 ====================
 - added restrictions on small channels / Добавлены ограничения на небольшие каналы
