--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ====================
+21.09.2021 | v.1.0.3
+====================
+- вdded the ability to install the bot online / Добавлена возможность онлайн установки бота
+
+====================
 11.09.2021 | v.1.0.2
 ====================
 - page with additional information about the channel has been changed / Изменилась страница с дополнительной информацией о канале
