--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 ====================
 21.09.2021 | v.1.0.3
 ====================
-- вdded the ability to install the bot online / Добавлена возможность онлайн установки бота
+- added the ability to install the bot online / Добавлена возможность онлайн установки бота
 
 ====================
 11.09.2021 | v.1.0.2
