--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ====================
+27.09.2021 | v.1.0.4
+====================
+- bug fix
+
+====================
 21.09.2021 | v.1.0.3
 ====================
 - added the ability to install the bot online / Добавлена возможность онлайн установки бота
