--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 ====================
 27.09.2021 | v.1.0.4
 ====================
-- bug fix
+- bugs fix
 
 ====================
 21.09.2021 | v.1.0.3
