--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ====================
+09.10.2021 | v2.0.1
+====================
+- added the ability to create polls and complete predictions. / Добавлена возможность создания опросов и завершения прогнозов
+
+====================
 27.09.2021 | v.1.0.4
 ====================
 - bugs fix
