--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ====================
+19.11.2021 | v2.0.2
+====================
+- fixed bugs with old text
+
+====================
 09.10.2021 | v2.0.1
 ====================
 - added the ability to create polls and complete predictions. / Добавлена возможность создания опросов и завершения прогнозов
